@@ -18,6 +18,26 @@
 TypeHandle TinyTextureContext::_type_handle;
 
 ////////////////////////////////////////////////////////////////////
+//     Function: TinyTextureContext::Destructor
+//       Access: Public
+//  Description: Releases the memory associated with the texture.
+////////////////////////////////////////////////////////////////////
+TinyTextureContext::
+~TinyTextureContext() {
+  GLTexture *gltex = &_gltex;
+  if (gltex->allocated_buffer != NULL) {
+    nassertv(gltex->num_levels != 0);
+    TinyTextureContext::get_class_type().dec_memory_usage(TypeHandle::MC_array, gltex->total_bytecount);
+    PANDA_FREE_ARRAY(gltex->allocated_buffer);
+    gltex->allocated_buffer = NULL;
+    gltex->total_bytecount = 0;
+    gltex->num_levels = 0;
+  } else {
+    nassertv(gltex->num_levels == 0);
+  }
+}
+
+////////////////////////////////////////////////////////////////////
 //     Function: TinyTextureContext::evict_lru
 //       Access: Public, Virtual
 //  Description: Evicts the page from the LRU.  Called internally when
